--- a/gq_training_job.yaml
+++ b/gq_training_job.yaml
@@ -22,11 +22,11 @@ spec:
           limits:
             cpu: "2.4"
             memory: 32Gi
-            nvidia.com/gpu: 1
+            nvidia.com/gpu: '1'
           requests:
             cpu: "2"
             memory: 30Gi
-            nvidia.com/gpu: 1
+            nvidia.com/gpu: '1'
         volumeMounts:
         - name: part-vol-3
           mountPath: /part-vol-3
