edit data config for hls4ml

--- a/data/HLS4ML/hls4ml.yaml
+++ b/data/HLS4ML/hls4ml.yaml
@@ -5,7 +5,7 @@ selection:
 new_variables:
    ### [format] name: formula
    ### can use functions from `math`, `np` (numpy), and `awkward` in the expression
-   part_mask: ak.ones_like(part_deta)
+   part_mask: ak.ones_like(part_energy)
    part_pt: np.hypot(part_px, part_py)
    part_pt_log: np.log(part_pt)
    part_e_log: np.log(part_energy)
