--- a/data/HLS4ML/hls4ml.yaml
+++ b/data/HLS4ML/hls4ml.yaml
@@ -7,10 +7,10 @@ new_variables:
    ### can use functions from `math`, `np` (numpy), and `awkward` in the expression
    part_mask: ak.ones_like(part_energy)
    part_pt: np.hypot(part_px, part_py)
-   part_pt_log: np.log(part_pt)
-   part_e_log: np.log(part_energy)
-   part_logptrel: np.log(part_pt/jet_pt)
-   part_logerel: np.log(part_energy/jet_energy)
+   part_pt_log: np.log(np.maximum(part_pt, 1e-6))  # Avoid log(0)
+   part_e_log: np.log(np.maximum(part_energy, 1e-6))
+   part_logptrel: np.log(np.maximum(part_pt/jet_pt, 1e-6))
+   part_logerel: np.log(np.maximum(part_energy/jet_energy, 1e-6))
    part_deltaR: np.hypot(part_deta, part_dphi)
    #jet_isGluon: label == 0
    #jet_isQuark: label == 1
