--- a/data/HLS4ML/hls4ml.yaml
+++ b/data/HLS4ML/hls4ml.yaml
@@ -20,7 +20,7 @@ new_variables:
 
 preprocess:
    ### method: [manual, auto] - whether to use manually specified parameters for variable standardization
-   method: auto
+   method: manual
    ### data_fraction: fraction of events to use when calculating the mean/scale for the standardization
    data_fraction: 0.5
 
